<resources>
    <string name="app_name">SIPP</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="email">Email</string>
    <string name="address">Alamat</string>
    <string name="password">Password</string>
    <string name="login_description">Masukkan email dan password yang terdaftar pada aplikasi</string>
    <string name="register_description">Masukkan data dirimu dan data lainnya</string>
    <string name="first_name">Nama depan</string>
    <string name="last_name">Nama belakang</string>
    <string name="phone">Nomor telepone</string>
    <string name="next">Selanjutnya</string>
    <string name="trash_description">Deskripsi sampah</string>
    <string name="sum_of_trash">Jumlah sampah/hari (kg)</string>
    <string name="pickup_total">Penjemputan yang dilakukan (... kali/bulan)</string>
    <string name="register_as">Daftarkan dirimu sebagai</string>
    <string name="register_succes">Akun kamu berhasil terdaftar, mohon tunggu dan cek email kamu untuk verifikasi</string>
    <string name="please_wait">Mohon Tunggu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_pickup">Pilih Jenis Penjemputan</string>
    <string name="choose">Pilih</string>
    <string name="pickup_plan">Penjemputan Terjadwal</string>
    <string name="desc_pickup_plan">Penjemputan terjadwal akan dilakukan<br />3x/minggu, total penjemputan 12x/bulan</string>
    <string name="order">Pesan</string>
    <string name="not_yet_pickup">Kamu belum melakukan penjemputan</string>
    <string name="description_no_pickup">Silahkan klik tombol jemput di bagian bawah</string>
    <string name="_0">0</string>
    <string name="start_date">Tanggal mulai</string>
    <string name="ex_start_date">Friday, May 28, 2021</string>
    <string name="status">Status</string>
    <string name="end_date">Tanggal selesai</string>
    <string name="payment">Pembayaran</string>
    <string name="paid">Sudah dibayar</string>
    <string name="active">Aktif</string>
    <string name="amount_pickup">Sisa Penjemputan</string>
    <string name="ex_name">Abdullah Fahmi</string>
    <string name="ex_email">bloginfo693@gmail.com</string>
    <string name="personal">Personal</string>
    <string name="industry">Industry</string>
    <string name="ex_address">Jl. Abdulrahman</string>
</resources>