<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.driver.DriverActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/green_1000"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/loadBar"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gill_sans_ultra_bold_cond"
                android:text="@string/please_wait"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ProgressBar
                android:id="@+id/loadBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:paddingBottom="30dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/placeholder_title_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_1000">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/personal"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/gill_sans_bold_cond"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/placeholder_title_personal"
            android:layout_above="@id/placeholder_title_industry"
            tools:listitem="@layout/item_driver_pickup"/>

        <RelativeLayout
            android:id="@+id/placeholder_title_industry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/green_1000">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/industry"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:fontFamily="@font/gill_sans_bold_cond"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_industry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/placeholder_title_industry"
            tools:listitem="@layout/item_driver_pickup"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>